# Tengu712.github.io

./: .gitattributes  .gitignore  .htaccess  Cargo.toml  README.md  astro.config.mjs  binary.sh  bun.lockb  index.html  index.php  package-lock.json  package.json  style.css  touhou-fan-books-i-have.html  tsconfig.json
.github/workflows/: publish.yaml
app/: default.css  layout.tsx  page.tsx
app/_components/: footer.tsx  header.module.css  header.tsx  quoteblock.module.css  (+1 more)
clear-table/: data.js  site.html  style.css  table.js
codeblock/: codeblock.css  codeblock.js
css/: homepage.css  skdgit.css  style_common.css  style_pc.css  style_phone.css
docs/: HEALTH.md  LAYOUT.md  TEMPLATE.md
html/: CNAME  index.html.xd
js/: cssselector.js  cssselector_skdgit.js
netas/: data.js  site.html  style.css  table.js
novel/: 2022-06-03.html  style.css
pages/: about.html  about.php  assembly  gensou_no_yukue  index.md  index.php  odairoulete.html  pages.php  thcleartable  touhou_clear_table.php  touhou_fanbooks_i_have.php
posts/: _indecies.php  _post.php  ai-illustration  allocate-descriptor-sets  com-in-rust  enum-windows  index.php  post.php  solink-speed  start  start-vim  stdout-speed  windows-to-ubuntu
src/: Program.cs  cssq.js  index.js  parser.js  posts.js  utils.ts
ssg/: component.rs  defaults.rs  embedded.rs  main.rs  md.rs  strutil.rs  template.rs
template/: _template.php  footer.html  head.html  header.html  homepage.css
touhou-fan-books-i-have/: data.js  site.html  table.js
works/: data.js  site.html  style.css  table.js
xml/: about.xml
(+338 files in other folders)
